<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nsvContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textview_20sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Form Detail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFirstName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/first_name"
            android:nextFocusDown="@id/tilLastName"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLastName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/last_name"
            android:nextFocusDown="@id/tilMobile"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/mobile"
            android:nextFocusDown="@id/tilBloodGroup"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBloodGroup"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/blood_group"
            android:nextFocusDown="@id/tilAddress"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBloodGroup"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/address"
            android:minHeight="@dimen/dimen_48"
            android:nextFocusDown="@id/tilCity"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCity"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/city"
            android:nextFocusDown="@id/tilState"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilState"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/state"
            android:nextFocusDown="@id/tilLastName"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etState"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCountry"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10"
            android:hint="@string/country"
            app:boxBackgroundColor="@color/colorBg"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="true"
            app:shapeAppearanceOverlay="@style/editTextAddShape">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCountry"
                style="@style/edittext_16sp_normal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSubmit"
            style="@style/white_16sp_bold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50"
            android:layout_marginTop="@dimen/dimen_20"
            android:background="@drawable/bg_btn_submit"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>